[package]
name = "rinafy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
gifski = "1.14.4"
image = "0.25.0"
imgref = "1.10.1"
rgb = "0.8.37"
quick-error = "2.0.1"
color-art = "0.3.7"
